Prevent the configuration options from overlapping the qty field
Fixes DD 71427 453

--- a/app/design/frontend/Travers/default/Magento_Catalog/styles/module/_common.scss
+++ b/app/design/frontend/Travers/default/Magento_Catalog/styles/module/_common.scss
@@ -252,6 +252,8 @@
 }
 
 .product-options-wrapper {
+    flex-basis: 100%;
+
     .fieldset-product-options-inner {
         .legend {
             font-weight: $font-weight__bold;
